tests/fixtures/simple_err.out
error: Could not match types:

        @ __ROOT__/tests/fixtures/simple_err.rb:3
      3 |  def add1(Integer x) => Integer
                    ^^^^^^^ Integer, with:
        @ __ROOT__/tests/fixtures/simple_err.rb:8
      8 |    add1("0")
                  ^^^ String
        @ __ROOT__/tests/fixtures/simple_err.rb:8
      8 |    add1("0")
             ^^^^^^^^^ in this expression
