tests/fixtures/simple_err.rb
# @typedruby

def add1(Integer x) => Integer
  x + 1
end

def use_add1 => Integer
  add1("0")
end
